typescript/checker/tests/conformance/statements/breakStatements/invalidSwitchBreakStatement.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            73,
        ),
        hi: BytePos(
            74,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    73,
                ),
                hi: BytePos(
                    74,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            73,
                        ),
                        hi: BytePos(
                            74,
                        ),
                        ctxt: #0,
                    },
                    value: 5.0,
                },
            ),
        },
    ),
    right: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    57,
                ),
                hi: BytePos(
                    59,
                ),
                ctxt: #0,
            },
            lit: Number(
                Number {
                    span: Span {
                        lo: BytePos(
                            57,
                        ),
                        hi: BytePos(
                            59,
                        ),
                        ctxt: #0,
                    },
                    value: 12.0,
                },
            ),
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/statements/breakStatements/invalidSwitchBreakStatement.ts:4:10
  |
4 |     case 5:
  |          ^

